# LogDoctor_Uninstaller

uninstaller/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
uninstaller/modules/dialogs/: dialogbool.cpp  dialogbool.h  dialogbool.ui
uninstaller/resources/: resources.qrc
uninstaller/resources/translations/: LogDoctorUninstaller_en.qm  LogDoctorUninstaller_es.qm  LogDoctorUninstaller_fr.qm  LogDoctorUninstaller_it.qm
uninstaller/translations/: LogDoctorUninstaller_en.ts  LogDoctorUninstaller_es.ts  LogDoctorUninstaller_fr.ts  LogDoctorUninstaller_it.ts
